[package]
name = "ngram-indexer"
version = "0.1.0"
authors = ["Stu Black <trurl@freeshell.org>"]
build = "build.rs"

[dependencies]
flate2 = "0.2.*"
clap = "2.10.*"
csv = "0.14.*"
capnp = "0.7.*"
itertools = "0.4.*"
lazy_static = "0.2.*"
regex = "0.1.*"
rustc-serialize = "0.3.*"

[build-dependencies]
capnpc = "0.7.*"